syntax = "proto3";

package app;

service AccountController {
  rpc SignIn (Credentials) returns (AuthToken);
}

service AppController {
  rpc SignIn (Credentials) returns (AuthToken);
}

message Credentials {
  string login = 1;
  string password = 2;
}
message AuthToken {
  string token = 1;
}